exports[`FormStep should render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center",
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
          Object {
            "margin": 25,
            "marginBottom": 50,
          },
        ],
      ]
    }>
    Test Test Title
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    I am a child.
  </Text>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16,
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`FormStep should support disabling its back button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      undefined,
    ]
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center",
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400",
          },
          Object {
            "margin": 25,
            "marginBottom": 50,
          },
        ],
      ]
    }>
    Test Test Title
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    I am a child.
  </Text>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }>
    <View
      style={
        Object {
          "flexDirection": "row",
          "margin": 16,
        }
      }>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 5,
              "justifyContent": "center",
              "marginHorizontal": 16,
              "paddingBottom": 17,
              "paddingTop": 15,
            },
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#f77040",
              "borderWidth": 1,
            },
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              Object {
                "marginRight": 16,
                "width": 58,
              },
            ],
            undefined,
            Array [
              Object {
                "borderColor": "#dfe5e6",
              },
              undefined,
            ],
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#003035",
                "fontFamily": "Brandon Text",
                "fontSize": 13,
                "textAlign": "center",
              },
              Array [
                Object {
                  "fontFamily": "Brandon Text_bold",
                  "fontSize": 13,
                  "fontWeight": "bold",
                  "letterSpacing": 1,
                },
                Object {
                  "color": "#f77040",
                },
                undefined,
                Array [
                  Object {
                    "color": "#dfe5e6",
                  },
                  undefined,
                ],
              ],
            ]
          }>
          <Image
            source={1}
            style={
              Array [
                Object {
                  "height": 24,
                  "width": 24,
                },
                Object {},
              ]
            } />
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffbcbc",
              "borderColor": "red",
              "borderWidth": 1,
              "height": 100,
              "justifyContent": "center",
              "margin": 10,
              "width": 300,
            },
            undefined,
          ]
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "margin": 20,
            }
          }>
          TouchableNativeFeedback is not supported on this platform!
        </Text>
      </View>
    </View>
  </View>
</View>
`;
